@@ -1,5 +1,5 @@
 Processing module test88 (test_input/test88.py)...
-/usr/lib/python2.4/whrandom.py:38: DeprecationWarning: the whrandom module is deprecated; please use the random module
+[system path]/whrandom.py:38: DeprecationWarning: the whrandom module is deprecated; please use the random module
   DeprecationWarning)
 
 Warnings...
